# SonicDub-Studio

./: .gitignore  CMakeLists.txt  README.md  build.bat  vcpkg.json
.github/workflows/: build.yml
ai_engine/: requirements.txt  server.py
chrome_extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
installer/: installer.nsi
scripts/: build_ai_bridge.bat
src/: main.cpp
src/backends/translation/: deepl.cpp  deepl.h  google_translate.cpp  google_translate.h  libretranslate.cpp  libretranslate.h
src/backends/tts/: edge_tts.cpp  edge_tts.h  elevenlabs_tts.cpp  elevenlabs_tts.h  gemini_tts.cpp  gemini_tts.h  google_cloud_tts.cpp  google_cloud_tts.h  vibevoice_tts.cpp  vibevoice_tts.h  xtts_engine.cpp  xtts_engine.h
src/core/: config_manager.cpp  config_manager.h  error_handler.cpp  error_handler.h  logger.cpp  logger.h  pipeline_manager.cpp  pipeline_manager.h  segment.h  thread_pool.cpp  thread_pool.h
src/gui/: drop_zone_widget.cpp  drop_zone_widget.h  language_selector.cpp  language_selector.h  log_viewer.cpp  log_viewer.h  main_window.cpp  main_window.h  progress_panel.cpp  progress_panel.h  settings_dialog.cpp  settings_dialog.h
src/network/: http_client.cpp  http_client.h  rest_api_server.cpp  rest_api_server.h
src/stages/: audio_extractor.cpp  audio_extractor.h  audio_mixer.cpp  audio_mixer.h  audio_syncer.cpp  audio_syncer.h  diarizer.cpp  diarizer.h  transcriber.cpp  transcriber.h  translator.h  tts_engine.h  vibevoice_transcriber.cpp  vibevoice_transcriber.h  video_muxer.cpp  video_muxer.h  voice_profiler.cpp  voice_profiler.h
src/utils/: audio_utils.cpp  audio_utils.h  ffmpeg_wrapper.cpp  ffmpeg_wrapper.h  file_utils.cpp  file_utils.h  json_utils.h
tests/: CMakeLists.txt  test_audio_extractor.cpp  test_pipeline.cpp
